name:               zeromq-haskell
version:            0.8.1
synopsis:           bindings to zeromq
category:           System, FFI
license:            MIT
license-file:       LICENSE
author:             Toralf Wittner
maintainer:         toralf.wittner@gmail.com
copyright:          Copyright (c) 2011 zeromq-haskell authors
homepage:           http://github.com/twittner/zeromq-haskell/
stability:          experimental
tested-With:        GHC == 7.0.3
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: README.md
                  , AUTHORS
                  , examples/*.hs
                  , examples/perf/*.hs
description:
    The 0MQ lightweight messaging kernel is a library which extends
    the standard socket interfaces with features traditionally provided
    by specialised messaging middleware products. 0MQ sockets provide
    an abstraction of asynchronous message queues, multiple messaging
    patterns, message filtering (subscriptions), seamless access to
    multiple transport protocols and more.

    This library provides the Haskell language binding to 0MQ and
    supports 0MQ 2.x as well as 3.x (use -fzmq2 or -fzmq3 to select
    between the two).

flag zmq2
    description: Compile with 0MQ 2.x
    default: True

flag zmq3
    description: Compile with 0MQ 3.x
    default: False

library
    hs-source-dirs:       src
    exposed-modules:      System.ZMQ
    other-modules:        System.ZMQ.Base
                        , System.ZMQ.Internal
    includes:             zmq.h
    ghc-options:          -Wall -O2
    extensions:           CPP
                        , ForeignFunctionInterface
                        , ExistentialQuantification
    build-depends:        base >= 3 && < 5
                        , containers
                        , bytestring

    if flag(zmq2)
        cpp-options:      -DZMQ2

    if flag(zmq3)
        cpp-options:      -DZMQ3

    if os(freebsd)
        extra-libraries:  zmq, pthread
    else
        extra-libraries:  zmq

test-suite zeromq-haskell-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          tests.hs
    build-depends:    zeromq-haskell
                    , base >= 3 && < 5
                    , containers
                    , bytestring
                    , test-framework >= 0.4
                    , test-framework-hunit >= 0.2
                    , HUnit
    ghc-options:      -Wall -threaded -rtsopts

source-repository head
    type:             git
    location:         https://github.com/twittner/zeromq-haskell


