name:               zeromq3-haskell
version:            0.1
synopsis:           Bindings to ZeroMQ 3.x
category:           System, FFI
license:            MIT
license-file:       LICENSE
author:             Toralf Wittner
maintainer:         toralf.wittner@gmail.com
copyright:          Copyright (c) 2010 - 2012 zeromq-haskell authors
homepage:           http://github.com/twittner/zeromq-haskell/
stability:          experimental
tested-With:        GHC == 7.0.3
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: README.md
                  , AUTHORS
                  , examples/*.hs
                  , examples/Makefile
                  , examples/perf/*.hs
                  , examples/perf/Makefile
                  , tests/*.hs
                  , tests/System/ZMQ3/Test/*.hs
description:
    The 0MQ lightweight messaging kernel is a library which extends
    the standard socket interfaces with features traditionally provided
    by specialised messaging middleware products. 0MQ sockets provide
    an abstraction of asynchronous message queues, multiple messaging
    patterns, message filtering (subscriptions), seamless access to
    multiple transport protocols and more.

    This library provides the Haskell language binding to 0MQ >= 3.1.0

library
    hs-source-dirs:       src
    exposed-modules:      System.ZMQ3, Data.Restricted
    other-modules:        System.ZMQ3.Base
                        , System.ZMQ3.Internal
                        , System.ZMQ3.Error
    includes:             zmq.h
    ghc-options:          -Wall -O2
    extensions:           CPP
                        , ForeignFunctionInterface
    build-depends:        base >= 3 && < 5
                        , containers
                        , bytestring

    if os(freebsd)
        extra-libraries:  zmq, pthread
    else
        extra-libraries:  zmq

test-suite zeromq-haskell-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          tests.hs
    build-depends:    zeromq3-haskell
                    , base >= 3 && < 5
                    , containers
                    , bytestring
                    , test-framework >= 0.4
                    , test-framework-quickcheck2 >= 0.2
                    , QuickCheck >= 2.4
    ghc-options:      -Wall -threaded -rtsopts

source-repository head
    type:             git
    location:         https://github.com/twittner/zeromq-haskell


